gcc/testsuite/rust/rustc/ui/extenv/extenv-not-defined-default.rs
fn main() {
    env!("__HOPEFULLY_NOT_DEFINED__");
// { dg-error "" "" { target *-*-* } .-1 }
}

